<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:paddingTop="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/fNameEdit"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:hint="@string/lNameEdit"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/cardNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:hint="@string/cnumberEdit"
            android:inputType="number" 
            android:maxLength="23" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/expiryEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/expiryEdit"
                android:inputType="number"
                android:maxLength="7" />

            <EditText
                android:id="@+id/cvcEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/cvcEdit"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:id="@+id/textSecure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSecure" />

            <ImageView
                android:id="@+id/secureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/padlock_black_medium" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>