<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

   
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/imageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:src="@drawable/padlock_black_medium" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:layout_toRightOf="@+id/imageTitle"
            android:textSize="18sp"
            android:text="@string/textSecure" />
        
    </RelativeLayout>
    
    <View
        android:id="@+id/customLine"
    android:layout_width="fill_parent"
    android:paddingTop="15dp"
    android:layout_height="2dp"
    android:background="@android:color/holo_blue_light"/>
    
     <TextView
        android:id="@+id/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applicationTerms"
        android:textSize="18sp"
        android:padding="8dp" />
     
     <View
        android:id="@+id/customLine2"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"/>

     
     <Button
         android:id="@+id/okButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:text="@string/okButton" />

</LinearLayout>
